Fix Logout btn styling and alignment

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -137,6 +137,13 @@ section#frontpagetitle {
     font-size: 16px;
     color: #fff;
   }
+  .btn-uppercase {
+    margin-top: 24px;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-family: sans-serif;
+    font-weight: 600;
+  }
 }
 
 section#pagetitle {
